# pic-metrics-loader

./: pyproject.toml
db/: daily_metrics.sql  montly_metrics.sql  weekly_metrics.sql
src/metrics_loader/: __main__.py  date_helpers.py  timeframe.py
src/metrics_loader/model/: __init__.py  base.py  base_data.py  entity.py  metrics.py
src/metrics_loader/persistence/: source.py  target.py
src/metrics_loader/queries/: __init__.py  metrics.py
