[tool.poetry]
name = "metrics-loader"
version = "0.1.0"
description = ""
authors = ["TomasJuhos <tomas.juhos@2iqresearch.com>"]
readme = "README.md"
packages = [{include = "metrics_loader"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
